# energy-dashboard

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  start-local.bat
.github/workflows/: publish-container.yml
dashboard/: __init__.py  cli.py  common.py  payload_charts.py  payload_diagnostics.py  payload_helpers.py  payload_insights.py  payloads.py  scheduler.py  server.py  service.py  service_archive.py  service_auth.py  service_base.py  service_sync.py  service_views.py  tesla_api.py
dashboard/static/: app.css  app.js
dashboard/templates/: index.html
static/: app.css  app.js
templates/: index.html
tests/: test_dashboard.py
