[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tesla-energy-dashboard"
version = "0.1.0"
description = "Local Tesla energy CSV archive and comparison dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["teslapy", "tzdata"]

[project.scripts]
tesla-energy-dashboard = "dashboard.cli:main"

[tool.setuptools.packages.find]
include = ["dashboard"]

[tool.setuptools.package-data]
dashboard = ["static/*.css", "static/*.js", "templates/*.html"]
