[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tesla-energy-dashboard"
dynamic = ["version"]
description = "Local Tesla energy CSV archive and comparison dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["teslapy", "tzdata"]

[project.scripts]
tesla-energy-dashboard = "dashboard.cli:main"

[tool.setuptools.packages.find]
include = ["dashboard"]

[tool.setuptools.dynamic]
version = {attr = "dashboard.__version__"}

[tool.setuptools.package-data]
dashboard = ["static/*.css", "static/*.js", "static/*.png", "static/*.svg", "templates/*.html"]
